--- a/config/database.yml
+++ b/config/database.yml
@@ -2,55 +2,54 @@
 ##   gem install sqlite3
 ##
 ##   Ensure the SQLite 3 gem is defined in your Gemfile
-##   gem 'sqlite3'
-## postgresql
-#default: &default
-#  adapter: postgresql
-#  pool: 5
-#  timeout: 5000
-#  useranme: root
-#  password: root
-#
-#development:
-#  <<: *default
-#  database: sphinx1
-#
-## Warning: The database defined as "test" will be erased and
-## re-generated from your development database when you run "rake".
-## Do not set this db to the same as development or production.
-#test:
-#  <<: *default
-#  database: sphinx1
-#
-#production:
-#  <<: *default
-#  database: sphinx1
-
-
-
+#   gem 'sqlite3'
+# postgresql
+default: &default
+  adapter: postgresql
+  pool: 5
+  timeout: 5000
 
 
 development:
-  adapter: mysql2
-  database: sphinx
-  username: root
-  password: root
-  encoding: utf8
-  host: localhost
+  <<: *default
+  database: sphinx1
 
-
+# Warning: The database defined as "test" will be erased and
+# re-generated from your development database when you run "rake".
+# Do not set this db to the same as development or production.
 test:
-  adapter: mysql2
-  database: sphinx
-  username: root
-  password: root
-  encoding: utf8
-  host: localhost
+  <<: *default
+  database: sphinx1
 
 production:
-  adapter: mysql2
-  database: sphinx
-  username: root
-  password: root
-  encoding: utf8
-  host: localhost
+  <<: *default
+  database: sphinx1
+
+
+
+#
+#
+#development:
+#  adapter: mysql2
+#  database: sphinx
+#  username: root
+#  password: root
+#  encoding: utf8
+#  host: localhost
+#
+#
+#test:
+#  adapter: mysql2
+#  database: sphinx
+#  username: root
+#  password: root
+#  encoding: utf8
+#  host: localhost
+#
+#production:
+#  adapter: mysql2
+#  database: sphinx
+#  username: root
+#  password: root
+#  encoding: utf8
+#  host: localhost
